<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Effoto</string>
    <string name="are_you_sure_quit">Quit?</string>
    <!-- <string name="add_text">Text</string> -->
    <string name="backgrd">Background</string>
    <string name="background">Background color</string>
    <string name="blur">Blur</string>
    <string name="blurrad">Blur radius</string>
    <string name="brightness">Brightness</string>
    <string name="cant_read_folder">folder can\'t be read!</string>
    <string name="cant_save_picture_to">Can\'t save picture to</string>
    <string name="cant_write_to_this_folder">can\'t write to this folder</string>
    <string name="choose_format">Picture Format</string>
    <string name="circle">Circle</string>
    <string name="circles">Circles</string>
    <string name="clip">Clip</string>
    <string name="color">Color</string>
    <string name="contrast">"Contrast  "</string>
    <string name="create">Save</string>
    <string name="darkness">"Darkness "</string>
    <string name="density">Density</string>
    <string name="dir_doesnt_exist">output folder doesn\'t exist yet</string>
    <string name="double_tap">Scale Saturation (2-tap)</string>
    <string name="edit_file_name">Edit file name</string>
    <string name="emboss">Emboss</string>
    <!--
         <string name="error">error</string>
    <string name="error_copying_exif">"(error writing EXIF) "</string>
    -->
    <string name="exif">Retain EXIF</string>
    <string name="exif_key">exif</string>
    <string name="folder_key">folder</string>
    <string name="exif_sum">Retain EXIF meta information</string>
    <string name="folder_name">Folder Name</string>
    <string name="fill_with_text">Fill with text</string>
    <string name="fit">Fit</string>
    <string name="folder">Folder</string>
    <string name="folder_select">Select folder</string>
    <!-- <string name="help">Adjust wave\'s width and height by 1-tap, wave\'s form by 2-tap, frame\'s width and height by 3-tap (when "Fit" is disabled)\n</string> -->
    <string name="jpeg_quality">JPEG Compression</string>
    <string name="media_scanner">Media Scanner</string>
    <string name="media_scanner_desc">Press to search for new pictures and add them to gallery</string>
    <string name="media_scanning">Searching...</string>
    <string name="menu_settings">Settings</string>
    <string name="nnew">New</string>
    <string name="no_data">No Data</string>
    <string name="no_pictures">no pictures to process</string>
    <string name="none">None</string>
    <string name="normal">Normal</string>
    <string name="nothing_to_delete">nothing to delete</string>
    <string name="nothing_to_open">nothing to open</string>
    <string name="opacity">Opacity</string>
    <string name="open">Open</string>
    <!-- <string name="output_folder">Output</string> -->
    <string name="picture_saved_to">Picture saved to</string>
    <string name="pictures_will_be_saved">Pictures will be saved as</string>
    <string name="postmark">Postmark</string>
    <string name="radius">"Radius "</string>
    <string name="rainbow">Rainbow</string>
    <string name="randofpos">"Randomness\nof position"</string>
    <string name="randofsz">"Randomness\n of size"</string>
    <string name="remove">Remove</string>
    <string name="satur">Saturation</string>
    <string name="saturation">"Saturation "</string>
    <string name="save_format">Save Format</string>
    <string name="save">Save</string>
    <string name="just_save_image">Just save image</string>
    <string name="select">Finish</string>
    <string name="settings">Settings</string>
    <string name="stop">Stop</string>
    <string name="stopped">stopped</string>
    <!-- <string name="text">Text</string> -->
    <string name="tool">Tool</string>
    <string name="transparency">"Transparency "</string>
    <string name="waves">Waves</string>
    <string name="width">"Width "</string>
    <string name="default_save_format">JPEG</string>
    <string name="only_border">Only border</string>
    <string name="load_effect">Saved Effects</string>
    <string name="load">Load</string>
    <string name="rename">Rename</string>
    <string name="save_effect">Save Effect</string>
    <string name="clear_all">Clear all</string>
    <string name="no_saves">No saved effects</string>
    <string name="input_name">Input name</string>
    <string name="input_new_name">Input new name</string>
    <string name="effect">Effect</string>
    <string name="share">Share</string>
    <string name="confirm_clear_all">Clear all?</string>
    <string name="frequency">How many</string>
    <string name="shoulddraw">Should Draw</string>
    <string name="draw">Draw</string>
    <string name="rounded">Rounded corner</string>
    
</resources>