<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="4dip" >

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#AAA"
        android:padding="2dip" >

        <ImageView
            android:id="@+id/drawimage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@drawable/backgd" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/should_draw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ll"
        android:text="@string/shoulddraw" />

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/should_draw"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/paint_width_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/width"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <SeekBar
            android:id="@+id/paint_radius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="71"
            android:progress="19" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ll2"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/paint_blur_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blur"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <SeekBar
            android:id="@+id/paint_blur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="72"
            android:progress="18" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ll3"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/frequency_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frequency"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <SeekBar
            android:id="@+id/frequency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="199"
            android:progress="39" />

        <TextView
            android:id="@+id/frequency_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>